k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cofry
  labels:
    app.kubernetes.io/name: cofry
    environment: production
